change switch endtime radio
change switch endtime radio

--- a/src/html/13_words.html
+++ b/src/html/13_words.html
@@ -76,15 +76,15 @@
           </div>
           <div class="xc-head-bottom">
             <div class="xc-head-categories">
-              <div class="xc-head-category">
+              <div class="xc-head-category radio">
                 <span class="circle active"></span>全部单词
                 <span class="number">20</span>
               </div>
-              <div class="xc-head-category">
+              <div class="xc-head-category radio">
                 <span class="circle"></span>生词
                 <span class="number">2</span>
               </div>
-              <div class="xc-head-category">
+              <div class="xc-head-category radio">
                 <span class="circle"></span>熟词
                 <span class="number">2</span>
               </div>
@@ -100,11 +100,11 @@
               <th style="width: 152px">序号</th>
               <th style="width: 152px">音标</th>
               <th style="width: 448px">单词
-                <div class="table-switch active">
+                <div class="table-switch">
                   <div class="table-switch-warp">
                     <div class="table-switch-inner"></div>
                   </div>
-                  隐藏全部
+                  <span class="tit">隐藏全部</span>
                 </div>
               </th>
               <th style="width: 448px">词义
@@ -112,81 +112,81 @@
                   <div class="table-switch-warp">
                     <div class="table-switch-inner"></div>
                   </div>
-                  显示全部
+                  <span class="tit">隐藏全部</span>
                 </div></th>
             </thead>
             <tbody>
               <tr>
                 <td>1</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>4</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>5</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>6</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>7</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>8</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>9</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>10</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>11</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
               <tr>
                 <td>12</td>
                 <td>[w3:d]</td>
-                <td>word</td>
-                <td></td>
+                <td><span>word</span></td>
+                <td><span>单词</span></td>
               </tr>
             </tbody>
           </table>
