--- a/src/html/14_sentence.html
+++ b/src/html/14_sentence.html
@@ -76,15 +76,15 @@
           </div>
           <div class="xc-head-bottom">
             <div class="xc-head-categories">
-              <div class="xc-head-category">
-                <span class="circle active"></span>全部单词
+              <div class="xc-head-category radio">
+                <span class="circle radio active"></span>全部单词
                 <span class="number">20</span>
               </div>
-              <div class="xc-head-category">
+              <div class="xc-head-category radio">
                 <span class="circle"></span>生词
                 <span class="number">2</span>
               </div>
-              <div class="xc-head-category">
+              <div class="xc-head-category radio">
                 <span class="circle"></span>熟词
                 <span class="number">2</span>
               </div>
@@ -99,11 +99,11 @@
             <thead>
               <th style="width: 100px">序号</th>
               <th style="width: 350px">英文
-                <div class="table-switch active">
+                <div class="table-switch">
                   <div class="table-switch-warp">
                     <div class="table-switch-inner"></div>
                   </div>
-                  隐藏全部
+                  <span class="tit">隐藏全部</span>
                 </div>
               </th>
               <th style="width: 350px">中文
@@ -111,7 +111,7 @@
                   <div class="table-switch-warp">
                     <div class="table-switch-inner"></div>
                   </div>
-                  显示全部
+                  <span class="tit">隐藏全部</span>
                 </div>
               </th>
               <th style="width: 100px">序号</th>
@@ -125,8 +125,8 @@
             <tbody>
               <tr>
                 <td>1</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio-active.png" alt="广播">
                 </td>
@@ -138,8 +138,8 @@
               </tr>
               <tr>
                 <td>2</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -151,8 +151,8 @@
               </tr>
               <tr>
                 <td>3</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -164,8 +164,8 @@
               </tr>
               <tr>
                 <td>4</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -177,8 +177,8 @@
               </tr>
               <tr>
                 <td>5</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -190,8 +190,8 @@
               </tr>
               <tr>
                 <td>6</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -203,8 +203,8 @@
               </tr>
               <tr>
                 <td>7</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -216,8 +216,8 @@
               </tr>
               <tr>
                 <td>8</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -229,8 +229,8 @@
               </tr>
               <tr>
                 <td>9</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -242,8 +242,8 @@
               </tr>
               <tr>
                 <td>10</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -255,8 +255,8 @@
               </tr>
               <tr>
                 <td>11</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
@@ -268,8 +268,8 @@
               </tr>
               <tr>
                 <td>12</td>
-                <td>How are you ？</td>
-                <td></td>
+                <td><span>How are you ？</span></td>
+                <td><span>你好吗?</span></td>
                 <td>
                   <img class="table-img" src="../img/sentence-radio.png" alt="广播">
                 </td>
