--- a/src/html/33_intelText_1.html
+++ b/src/html/33_intelText_1.html
@@ -148,7 +148,7 @@
     <div class="xc-container">
       <p class="intelText-footer-item">
         <img class="intelText-footer-timeImg" src="../img/intelText-footer-time.png" alt="tiem">倒计时
-        <span class="intelText-footer-time">01:28</span>测试时间：120分钟</p>
+        <span class="intelText-footer-time" time='7200' id="xc-time">02:00</span>测试时间：120分钟</p>
       <ul class="intelText-footer-btns">
         <li class="intelText-footer-btn">
           <a class="intelText-footer-link" href="javascript:;">上一题</a>
