--- a/src/html/exchangemanagement_has.html
+++ b/src/html/exchangemanagement_has.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
+  <link rel="stylesheet" href="../css/wj.css">
 
 
 
@@ -193,7 +193,110 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <!-- START panel-->
+            <div class="panel-default">
+              <div class="panel-heading">
+                <form class="text-right form-lineH">
+                  <div class="row">
+                    <div class="form-group col-sm-2">
+                      <label class="radio-inline c-radio">
+                          <input type="radio" name="a" value="option1">
+                          <span class="fa fa-circle"></span>全部</label>
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label class="radio-inline c-radio col-sm-3">
+                            <input type="radio" name="a" value="option1">
+                            <span class="fa fa-circle"></span>选择班级</label>
+                      <div class="col-sm-8">
+                        <select name="" id="" class="form-control">
+                          <option value="">全部</option>
+                          <option value="1">未分班</option>
+                          <option value="2">过期学员</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <!-- START table-responsive-->
+              <div class="panel-heading">
+                <div class="table-responsive">
+                  <table class="table table-bordered table-hover dataTable">
+                    <thead>
+                      <tr>
+                        <th class="sorting">下单时间</th>
+                        <th class="sorting">完成兑换时间</th>
+                        <th>兑换学员</th>
+                        <th>商品名称</th>
+                        <th>商品价格</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>学员名+学员手机</td>
+                        <td>商品名称商品名称</td>
+                        <td>10</td>
+                      </tr>
+                      <tr>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>学员名+学员手机</td>
+                        <td>商品名称商品名称</td>
+                        <td>10</td>
+                      </tr>
+                      <tr>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>2018-01-01 22:22:22</td>
+                        <td>学员名+学员手机</td>
+                        <td>商品名称商品名称</td>
+                        <td>10</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <!-- build:pages -->
+                <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
+                <!-- endbuild -->
+
+
+
+
+
+
+
+
+
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
