--- a/src/html/mall.html
+++ b/src/html/mall.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+  <link rel="stylesheet" href="../css/wj.css">
 
 
 
@@ -25,7 +26,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper mall-wrap">
     <!-- build:head -->
     <header class="topnavbar-wrapper">
       <nav role="navigation" class="navbar topnavbar">
@@ -193,7 +194,71 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <div class="col-xs-12 mb-20">
+              <a class="wj-a" href="./studyreport_overall.html">总体报告</a>
+              <a class="wj-a wj-a-active" href="javascript:;">全部报告</a>
+            </div>
+            <div class="col-xs-3">
+              <div class="panel panel-info">
+                <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
+                <div class="panel-body">
+                  <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
+                </div>
+                <div class="panel-footer">
+                  <p>商品名称</p>
+                  <p>
+                    <span class="text-danger">￥ 1200学币</span>
+                    <button class="btn btn-primary pull-right">兑换</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="panel panel-danger">
+                <div class="panel-heading portlet-handler ui-sortable-handle">售罄</div>
+                <div class="panel-body">
+                  <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
+                </div>
+                <div class="panel-footer">
+                  <p>商品名称</p>
+                  <p>
+                    <span>￥ 1200学币</span>
+                    <button class="btn pull-right">兑换</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="panel panel-info">
+                <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
+                <div class="panel-body">
+                  <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
+                </div>
+                <div class="panel-footer">
+                  <p>商品名称</p>
+                  <p>
+                    <span class="text-danger">￥ 1200学币</span>
+                    <button class="btn btn-primary pull-right">兑换</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="panel panel-info">
+                <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
+                <div class="panel-body">
+                  <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
+                </div>
+                <div class="panel-footer">
+                  <p>商品名称</p>
+                  <p>
+                    <span class="text-danger">￥ 1200学币</span>
+                    <button class="btn btn-primary pull-right">兑换</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
@@ -226,7 +291,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
+<script src="../js/mall.js"></script>
 
 
 
